# agentforge

./: .env.example  .gitignore  AgentForge_WebResearch_Plan.md  CLAUDE.md  LICENSE  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
dashboard/: app.py
dashboard/.streamlit/: config.toml
dashboard/pages/: 1_Config_Generator.py
scripts/: benchmark.py  demo_phase1.py
src/agentforge/: observability.py
src/agentforge/api/: app.py
src/agentforge/api/routes/: health.py  jobs.py  memory.py  metrics.py
src/agentforge/config/: __init__.py  models.yaml  settings.py
src/agentforge/config_generator/: __init__.py  generator.py  mcp_catalog.py  packager.py
src/agentforge/core/: activities.py  dispatcher.py  evaluator.py  meta_agent.py  pipeline.py  trainer.py  worker.py  worker_process.py  workflows.py
src/agentforge/memory/: episodic.py
src/agentforge/research/: __init__.py  cache.py  mcp_discoverer.py  result_parser.py  web_searcher.py
src/agentforge/schemas/: __init__.py  context_pack.py  job.py  research.py
src/agentforge/security/: __init__.py  audit.py  auth.py  sanitizer.py
src/agentforge/tools/: __init__.py  registry.py
src/agentforge/tools/builtin/: calculator.py  database.py  file_ops.py  page_reader.py  web_search.py
tests/evals/: baseline.json  evaluators.py  test_output_quality.py  test_tool_selection.py
tests/evals/datasets/: report_generation.json  tool_selection.json
tests/integration/: test_pipeline.py
tests/unit/: test_memory.py  test_registry.py  test_research.py  test_security.py  test_trainer.py
