[project]
name = "agentforge"
version = "0.1.0"
description = "Web-research-first AI agent training system"
requires-python = ">=3.12"
dependencies = [
    "langchain>=0.3",
    "langchain-anthropic",
    "langchain-openai",
    "langchain-community",
    "langgraph>=0.2",
    "langchain-mcp-adapters",
    "pydantic>=2.0",
    "pydantic-settings",
    "pydantic-ai",
    "fastapi",
    "uvicorn[standard]",
    "qdrant-client",
    "langfuse",
    "temporalio",
    "httpx",
    "aiohttp",
    "duckduckgo-search",
    "beautifulsoup4",
    "lxml",
    "pypdf",
    "tqdm",
    "streamlit>=1.35",
    "plotly>=5.0",
    "nest-asyncio",
    "pandas",
    "pyyaml>=6.0.3",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-mock",
    "ruff",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agentforge"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
src = ["src"]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]
